# yysfold

./: .dockerignore  .gitignore  .vercelignore  Dockerfile.api  Dockerfile.ingest  Dockerfile.mempool  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
analytics/: blockMetrics.ts  hotzoneConfig.ts  hotzones.ts  hypergraph.ts  residuals.ts  tags.ts  types.ts
api/: server.ts
artifacts/: halo2-proving.json  halo2-verifier.json  index.db  pipeline-output-hotzones.csv  pipeline-output-summary.json  pipeline-output.json  tmp-public.json
dashboard/: next.config.js  package-lock.json  package.json  tailwind.config.ts
docs/: build-roadmap.md  deployment-plan.md  financial-architecture.md  fingerprint-format.md  mathematical-foundations.md  mathematical-foundations.tex  ml-integration.tex  overview.md  roadmap.md  system-walkthrough-simple.tex  system-walkthrough.md  system-walkthrough.tex  trading-value-proposition.tex  zk.md
financial/: types.ts
fixtures/: mockBlock.ts
folding/: codebook.ts  commit.ts  componentMatrix.ts  compute.ts  fold.ts  index.ts  normalization.ts  pq.ts  types.ts  vectorize.ts
halo2/: Cargo.toml
halo2/src/: circuit.rs  io.rs  keys.rs  lib.rs  public_inputs.rs
ml/: compute_stats.py  isolationForest.ts  signals.ts  train_isolation_forest.py
scripts/: backfillBlocks.ts  backfillMetrics.ts  buildAtlas.ts  codebookCli.ts  ingestBlocks.ts  ingestFinancial.ts  mempoolWatch.ts  pqEncode.ts  runPipeline.ts  start-combined.sh  trainCodebook.ts  watchIngest.ts
shared/: behavior.ts
tests/: pipeline.test.ts
(+8462 files in other folders)
