[package]
name = "folding-halo2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
halo2_proofs = { package = "halo2-axiom", version = "0.5.1", default-features = true, features = ["multicore", "circuit-params"] }
halo2curves = { package = "halo2curves-axiom", version = "0.7.2", default-features = true }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


